CostalCloud/force-app/main/default/objects/Materials__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Product__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <formula>Product__r.Default_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials_Product__c</fullName>
        <formula>Price_Book_Name__c  &amp;&quot; | &quot; &amp; Product_Name__c &amp;&quot; | &quot; &amp;SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Materials Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBEId__c</fullName>
        <label>PBEId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Name__c</fullName>
        <formula>Price_Book__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Product__r.SKU_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <formula>TEXT(Product__r.UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Materials</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Materials_Product__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Unit_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Materials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>