CostalCloud/force-app/main/default/objects/Materials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Materials_Product__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>